[tool.poetry]
name = "defectmill"
version = "0.1.0"
description = ""
authors = ["Michael Cutshaw <michael.cutshaw@inl.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
tomli = "^2.0.1"
tqdm = "^4.64.0"
prompt-toolkit = "^3.0.30"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
